; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_lpc.c_FLAC__lpc_compute_expected_bits_per_residual_sample.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_lpc.c_FLAC__lpc_compute_expected_bits_per_residual_sample.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @FLAC__lpc_compute_expected_bits_per_residual_sample(double %0, i32 %1) #0 {
  %3 = alloca double, align 8
  %4 = alloca i32, align 4
  %5 = alloca double, align 8
  store double %0, double* %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ugt i32 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @FLAC__ASSERT(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = uitofp i32 %10 to double
  %12 = fdiv double 5.000000e-01, %11
  store double %12, double* %5, align 8
  %13 = load double, double* %3, align 8
  %14 = load double, double* %5, align 8
  %15 = call double @FLAC__lpc_compute_expected_bits_per_residual_sample_with_error_scale(double %13, double %14)
  ret double %15
}

declare dso_local i32 @FLAC__ASSERT(i32) #1

declare dso_local double @FLAC__lpc_compute_expected_bits_per_residual_sample_with_error_scale(double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
